Get user permission from user resource and allow getting all permissions set on an application
