# lib/handlers/applications/{id}/permissions.js
@@ -7,8 +7,8 @@ const data = require('../../../data');
 
 module.exports = {
   get(req, reply) {
-    const userPermission = _.find(data.applicationPermissions, {application_id: req.params.id, user_id: req.query.user_id});
+    const permissions = _.filter(data.applicationPermissions, {application_id: req.params.id});
 
-    reply(userPermission ? {scope: userPermission.scope} : boom.notFound());
+    reply(permissions);
   }
 };
